--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "author": "Code Smell",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "jest": "^26.1.0"
   }
