--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "tdd_resolvers",
   "version": "1.0.0",
   "description": "Unit Testing resolvers for code_smell channel",
-  "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "author": "Code Smell",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^26.1.0"
   },
   "dependencies": {
     "graphql": "^15.3.0",
-    "graphql-scalars": "^1.2.2"
+    "graphql-scalars": "^1.2.2",
+    "graphql-tag": "^2.10.4"
   }
 }
