--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "jest": "^26.1.0"
   },
   "dependencies": {
+    "apollo-server": "^2.15.1",
     "graphql": "^15.3.0",
-    "graphql-scalars": "^1.2.2",
-    "graphql-tag": "^2.10.4"
+    "graphql-scalars": "^1.2.2"
   }
 }
